<resources>
    <string name="title_activity_call">CallActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="video_btn_text">Enable Video</string>
    <string name="mute_btn_text">Mute</string>
    <string name="accept_btn_text">Accept</string>
    <string name="calling_title_text">Calling...</string>
    <string name="calling_caption_text">Calling</string>
    <string name="calling_user_ended_text">CALL ENDED</string>
    <string name="call_from_caption_text">Call  from</string>
</resources>